[gd_scene format=3 uid="uid://dtthkfs7xo3ra"]

[ext_resource type="Script" uid="uid://cqegj6qvsjvu5" path="res://Scripts/game_manager.gd" id="1_gamemanager"]
[ext_resource type="Texture2D" uid="uid://6h7335jju5b3" path="res://Assets/Sprites/background.png" id="1_jjgbg"]
[ext_resource type="PackedScene" uid="uid://dd1qgdtgwfw4e" path="res://Scenes/base_level.tscn" id="2_bo1nx"]
[ext_resource type="PackedScene" uid="uid://dt134v3hcptng" path="res://Scenes/plane.tscn" id="3_8gbba"]
[ext_resource type="Texture2D" uid="uid://b22jo8tig0u7" path="res://Assets/Sprites/UI/textGameOver.png" id="4_gameover"]
[ext_resource type="Texture2D" uid="uid://d17pluw0tguf" path="res://Assets/Sprites/UI/buttonLarge.png" id="5_restart"]

[node name="Main" type="Node2D" unique_id=1039145287]
script = ExtResource("1_gamemanager")

[node name="Parallax2D" type="Parallax2D" parent="." unique_id=1966735689]
scroll_scale = Vector2(0.5, 1)
repeat_size = Vector2(800, 0)
autoscroll = Vector2(-50, 0)
repeat_times = 2

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D" unique_id=1830102029]
texture = ExtResource("1_jjgbg")
centered = false

[node name="BaseLevel" parent="." unique_id=802909878 instance=ExtResource("2_bo1nx")]
position = Vector2(400, 450)

[node name="BaseLevel2" parent="." unique_id=802909879 instance=ExtResource("2_bo1nx")]
position = Vector2(1200, 450)

[node name="Camera2D" type="Camera2D" parent="." unique_id=2046457650]
anchor_mode = 0

[node name="Plane" parent="." unique_id=761971762 instance=ExtResource("3_8gbba")]
position = Vector2(150, 240)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1539003661]

[node name="GameOverControl" type="Control" parent="CanvasLayer" unique_id=1030628160]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverText" type="TextureRect" parent="CanvasLayer/GameOverControl" unique_id=651929385]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gameover")

[node name="RestartButton" type="TextureButton" parent="CanvasLayer/GameOverControl" unique_id=1568188326]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 20.0
offset_right = 75.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_restart")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/GameOverControl/RestartButton" unique_id=1950698785]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "RESTART"
horizontal_alignment = 1
vertical_alignment = 1
